kubernetes/elk/kibana/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  namespace: monitoring
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    name: kibana
  name: kibana
  selfLink: /apis/extensions/v1beta1/namespaces/monitoring/deployments/kibana

spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: kibana
    spec:
      containers:
      - image: ind3x/rpi-kibana #docker.elastic.co/kibana/kibana-oss:6.2.3
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
