kubernetes/elk/kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto != 'https') {
        return 301 https://$host$request_uri;
      }
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/default-backend: nginx-ingress-nginx-ingress-default-backend
  creationTimestamp: null
  generation: 1
  labels:
    name: kibana
  name: kibana
  selfLink: /apis/extensions/v1beta1/namespaces/monitoring/ingresses/kibana
spec:
  rules:
  - host: monitoring.conrolpanel.rio.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 80
        path: /
